--- a/.github/workflows/continuous-integration-workflow.yaml
+++ b/.github/workflows/continuous-integration-workflow.yaml
@@ -54,7 +54,7 @@ jobs:
         pip install pytest-cov
         pytest --cov=./ --cov-report=xml tests/ --ignore tests/reg_tests --ignore tests/timing.py --ignore tests/profiling.py
     - name: Upload coverage to Codecov
-      if: ${{ env.CODECOV_TOKEN }}  # Don't attempt to upload if the codecov token is not configured
+      if: matrix.os == 'ubuntu-latest' && ${{ env.CODECOV_TOKEN }}  # Don't attempt to upload if the codecov token is not configured
       uses: codecov/codecov-action@v3
       with:
         token: ${{ env.CODECOV_TOKEN }}
