Update floating tilt table for floating IEA 15MW model (#1151)
* Update floating tilt tables and model description

* Formatting fix.

* Update floater documentation (pending review)

--- a/floris/turbine_library/iea_15MW_floating_multi_dim_cp_ct.yaml
+++ b/floris/turbine_library/iea_15MW_floating_multi_dim_cp_ct.yaml
@@ -13,23 +13,55 @@ power_thrust_table:
   power_thrust_data_file: 'iea_15MW_multi_dim_Tp_Hs.csv'
 # The floating_tilt_table describes the steady state tilt of the floating platform as a function of
 # wind speed. This is used to adjust the power and thrust coefficients when correct_cp_ct_for_tilt
-# is True. The values specified here should be treated as a fictional example only, and may not
-# represent a real floating platform.
+# is True. Updated values as of FLORIS v4.6, taken from
+# https://github.com/FLOWMAS-EERC/IEA15_FOWT/blob/main/iea_15MW_floating_power-from-fixed.yaml
+# generated using OpenFAST with the U-Maine floater by Sam Kaufman-Martin.
+# The floater model used to generate these values is the UMaine VolturnUS-S Reference Platform.
 floating_tilt_table:
   tilt:
-    - 5.747296314800103
-    - 7.2342400188651068
-    - 9.0468701999352397
-    - 9.762182013267733
-    - 8.795649572299896
-    - 8.089078308325314
-    - 7.7229584934943614
+    - 5.406938261
+    - 5.889508311
+    - 6.566875672
+    - 7.339842075
+    - 8.189297064
+    - 9.175639814
+    - 10.20156799
+    - 10.42520318
+    - 9.954627435
+    - 9.266065643
+    - 8.833742574
+    - 8.514576732
+    - 8.268973572
+    - 8.076813462
+    - 7.924809783
+    - 7.803116564
+    - 7.70524892
+    - 7.626825229
+    - 7.564642136
+    - 7.516322963
+    - 7.48004717
+    - 7.45510389
   wind_speed:
-    - 4.0
-    - 6.0
-    - 8.0
-    - 10.0
-    - 12.0
-    - 14.0
-    - 16.0
+    - 3.5
+    - 4.5
+    - 5.5
+    - 6.5
+    - 7.5
+    - 8.5
+    - 9.5
+    - 10.5
+    - 11.5
+    - 12.5
+    - 13.5
+    - 14.5
+    - 15.5
+    - 16.5
+    - 17.5
+    - 18.5
+    - 19.5
+    - 20.5
+    - 21.5
+    - 22.5
+    - 23.5
+    - 24.5
 correct_cp_ct_for_tilt: True
