--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -2,4 +2,4 @@ blank_issues_enabled: false
 contact_links:
   - name: Usage question
     url: https://github.com/NREL/floris/discussions
-    about: Have any questions about using FLORIS? Post in Discussions to engage with the NREL team and FLORIS community.
+    about: Have any questions about using FLORIS? Post in Discussions to engage with the NLR team and FLORIS community.
