Update package dependences (dependabot) (#1172)
* Specify dependabot labels

* Update various packages as discovered by dependabot

--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -5,6 +5,8 @@ updates:
   target-branch: "develop"
   schedule:
     interval: "monthly"
+  labels:
+    - "package"
   ignore:
     - dependency-name: "*"
       update-types: ["version-update:semver-minor", "version-update:semver-patch"]
