--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -9,7 +9,7 @@ on:
 
 jobs:
   deploy:
-    if: github.repository_owner == 'NREL'
+    if: github.repository_owner == 'NatLabRockies'
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v3
