Improve various docstrings (#1171)
* Update references to floris.simulation and add docstring to get_defaults

* Improve docstrings for user-level functionality

* Update args docstring

* Formatting

* Update docstring

* Fix WETO software hyperlink

* Fix documentation for cut planes and add documentation for visualizations

* Add Katic reference

* Switch from r to r_squared to be explicit and avoid confusion

* Another reference to Katic

* Add notes regarding CH initial exponent

* Spelling fix

* Square image, update email addresses

* Update todo note

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,11 @@ description = "A controls-oriented engineering wake model."
 readme = "README.md"
 requires-python = ">=3.10, <3.15"
 authors = [
-    { name = "Rafael Mudafort", email = "Rafael.Mudafort@nrel.gov" },
-    { name = "Paul Fleming", email = "Paul.Fleming@nrel.gov" },
-    { name = "Michael (Misha) Sinner", email = "Michael.Sinner@nrel.gov" },
-    { name = "Eric Simley", email = "Eric.Simley@nrel.gov" },
-    { name = "Christopher Bay", email = "Christopher.Bay@nrel.gov" },
+    { name = "Rafael Mudafort", email = "Rafael.Mudafort@nlr.gov" },
+    { name = "Paul Fleming", email = "Paul.Fleming@nlr.gov" },
+    { name = "Michael (Misha) Sinner", email = "Michael.Sinner@nlr.gov" },
+    { name = "Eric Simley", email = "Eric.Simley@nlr.gov" },
+    { name = "Christopher Bay", email = "Christopher.Bay@nlr.gov" },
 ]
 license = { file = "LICENSE.txt" }
 keywords = ["floris"]
