Add permissions to python-publish workflow

--- a/.github/workflows/python-publish.yml
+++ b/.github/workflows/python-publish.yml
@@ -14,6 +14,8 @@ jobs:
     environment: release-pypi
     if: github.repository_owner == 'NatLabRockies'
     runs-on: ubuntu-latest
+    permissions:
+      id-token: write
     steps:
       - uses: actions/checkout@v6
       - name: Set up Python
